Add delta-sync functionality